[gd_scene load_steps=9 format=3 uid="uid://cwnqxbdvo47sn"]

[ext_resource type="Script" path="res://Scripts/VictoryScreen.gd" id="1_1vitx"]
[ext_resource type="Texture2D" uid="uid://da5vu12wuu1kj" path="res://Sprites/UI/SurroundCardSelectUI.png" id="2_3oyuf"]
[ext_resource type="Texture2D" uid="uid://cw4usysxd4wwf" path="res://Sprites/UI/SurroundCardSelectUI_orange.png" id="3_rapr8"]
[ext_resource type="Texture2D" uid="uid://bmidy4y3jo333" path="res://Sprites/UI/SurroundCardSelectUI_yellow.png" id="4_ymmji"]
[ext_resource type="FontFile" uid="uid://r5jnl80m8gja" path="res://Fonts/Sigmar-Regular.ttf" id="5_e3hvh"]

[sub_resource type="Animation" id="Animation_laaoy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slot1Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slot2Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slot3Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Slot4Button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_55ky5"]
resource_name = "flashcolors"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slot1Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.172549, 0.12549, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slot2Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.172549, 0.12549, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slot3Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.172549, 0.12549, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Slot4Button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.172549, 0.12549, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_us4lb"]
_data = {
"RESET": SubResource("Animation_laaoy"),
"flashcolors": SubResource("Animation_55ky5")
}

[node name="VictoryScreen" type="Node2D"]
script = ExtResource("1_1vitx")

[node name="Slot1Button" type="TextureButton" parent="."]
z_index = 2
offset_left = 9.0
offset_top = 263.0
offset_right = 409.0
offset_bottom = 503.0
texture_normal = ExtResource("2_3oyuf")
texture_pressed = ExtResource("3_rapr8")
texture_hover = ExtResource("4_ymmji")

[node name="Slot2Button" type="TextureButton" parent="."]
offset_left = 1510.0
offset_top = 260.0
offset_right = 1910.0
offset_bottom = 500.0
texture_normal = ExtResource("2_3oyuf")
texture_pressed = ExtResource("3_rapr8")
texture_hover = ExtResource("4_ymmji")

[node name="Slot3Button" type="TextureButton" parent="."]
offset_left = 1506.0
offset_top = 818.0
offset_right = 1906.0
offset_bottom = 1058.0
texture_normal = ExtResource("2_3oyuf")
texture_pressed = ExtResource("3_rapr8")
texture_hover = ExtResource("4_ymmji")

[node name="Slot4Button" type="TextureButton" parent="."]
offset_left = 12.0
offset_top = 821.0
offset_right = 412.0
offset_bottom = 1061.0
texture_normal = ExtResource("2_3oyuf")
texture_pressed = ExtResource("3_rapr8")
texture_hover = ExtResource("4_ymmji")

[node name="Flashbuttons" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_us4lb")
}

[node name="AwardedCardSlot" type="Node2D" parent="."]
position = Vector2(739, 512)

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 650.0
offset_top = 338.0
offset_right = 1249.0
offset_bottom = 461.0
theme_override_fonts/font = ExtResource("5_e3hvh")
theme_override_font_sizes/font_size = 36
text = "Victory!
The enemy dropped somthing!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
texture_filter = 1
offset_left = 605.0
offset_top = 793.0
offset_right = 1290.0
offset_bottom = 916.0
theme_override_fonts/font = ExtResource("5_e3hvh")
theme_override_font_sizes/font_size = 28
text = "Select a slot to replace with the card"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 713.0
offset_top = 482.0
offset_right = 1167.0
offset_bottom = 787.0
texture = ExtResource("2_3oyuf")

[connection signal="pressed" from="Slot1Button" to="." method="_on_slot_1_button_pressed"]
[connection signal="pressed" from="Slot2Button" to="." method="_on_slot_2_button_pressed"]
[connection signal="pressed" from="Slot3Button" to="." method="_on_slot_3_button_pressed"]
[connection signal="pressed" from="Slot4Button" to="." method="_on_slot_4_button_pressed"]
